unpackaged/main/default/objects/ReturnOrder/fields/Already_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Already_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Refunded</label>
    <type>Checkbox</type>
</CustomField>