unpackaged/main/default/objects/ReturnOrder/fields/CarrierStatus__c.field-meta.xml
<CustomField>
    <fullName>CarrierStatus__c</fullName>
    <label>CarrierStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>