unpackaged/main/default/objects/ReturnOrder/fields/ExchangeROLI__c.field-meta.xml
<CustomField>
    <fullName>ExchangeROLI__c</fullName>
    <label>Exchange ROLI</label>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.RepaymentMethod</field>
        <operation>equals</operation>
        <value>Exchange</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.FollowUpProcessed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.QuantityReceived</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>ReturnOrderLineItem.ReturnOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>