unpackaged/main/default/objects/ReturnOrder/fields/expectedPackages__c.field-meta.xml
<CustomField>
    <fullName>expectedPackages__c</fullName>
    <label>expectedPackages</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>