unpackaged/main/default/objects/ReturnOrder/fields/ProcessReship__c.field-meta.xml
<CustomField>
    <fullName>ProcessReship__c</fullName>
    <label>Process Reship</label>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.RepaymentMethod</field>
        <operation>equals</operation>
        <value>Reship</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.FollowUpProcessed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ReturnOrderLineItem.QuantityReceived</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>ReturnOrderLineItem.ReturnOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>