unpackaged/main/default/objects/ReturnOrder/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>Return Date</label>
    <type>DateTime</type>
</CustomField>