unpackaged/main/default/objects/ReturnOrder/fields/ReturnLabelUrl__c.field-meta.xml
<CustomField>
    <fullName>ReturnLabelUrl__c</fullName>
    <label>Return Label Url</label>
    <type>Url</type>
</CustomField>