unpackaged/main/default/objects/ReturnOrder/fields/ReturnOrigin__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrigin__c</fullName>
    <label>Return Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>