unpackaged/main/default/objects/ReturnOrder/fields/ReturnTrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>ReturnTrackingNumber__c</fullName>
    <label>Return Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>