unpackaged/main/default/objects/ReturnOrder/fields/ReturnTrackingURL__c.field-meta.xml
<CustomField>
    <fullName>ReturnTrackingURL__c</fullName>
    <label>Return Tracking URL</label>
    <type>Url</type>
</CustomField>