unpackaged/main/default/objects/ReturnOrder/fields/sentToEdicom__c.field-meta.xml
<CustomField>
    <fullName>sentToEdicom__c</fullName>
    <label>Sent To Edicom</label>
    <type>DateTime</type>
</CustomField>