unpackaged/main/default/objects/ReturnOrder/fields/Tech_ExchageButton__c.field-meta.xml
<CustomField>
    <fullName>Tech_ExchageButton__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tech_ExchageButton</label>
    <type>Checkbox</type>
</CustomField>