unpackaged/main/default/objects/ReturnOrder/fields/Tech_ShippingFeeRefund__c.field-meta.xml
<CustomField>
    <fullName>Tech_ShippingFeeRefund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_ShippingFeeRefund</label>
    <type>Checkbox</type>
</CustomField>