unpackaged/main/default/objects/ReturnOrder/listViews/All_ReturnOrders.listView-meta.xml
<ListView>
    <fullName>All_ReturnOrders</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Case</columns>
    <columns>SourceLocation</columns>
    <columns>ReturnedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Received</value>
    </filters>
    <label>All Return Orders</label>
</ListView>